--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 <!-- Container is to wrap everything -->
 <div id="container">
 <!-- Website Brand -->
-    <header><div class="main-header">
-        <div class="logo">
-            <h3>Great Cliff's Logo</h3>
-            <nav class="main-menu"></nav>
+    <header>
+    <img src="cliff_ocean.jpg" alt="Ocean View Cliff" width="1280" height="564">
+        <div class="main-header">
+            <div class="logo">
+                <img src="logo.png" alt="Great Cliffs logo" width="125">
         </div>
     </div></header>
 <!-- Main Navigation -->
