--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
     <header>
     <img src="cliff_ocean.jpg" alt="Ocean View Cliff" width="1280" height="564">
         <div class="main-header">
-            <div class="logo">
+            <div class="logo"><h3>Great Cliff's Logo</h3>
+                <nav class="main-menu">
+                    <ul>
+                        <li>Home</li>
+                        <li>Cliffs</li>
+                        <li>Activities</li>
+                        <li>Contact</li>
+                    </ul>
+                </nav>
                 <img src="logo.png" alt="Great Cliffs logo" width="125">
         </div>
     </div></header>
-<!-- Main Navigation -->
-    <nav>
-        <ul>
-            <li>Home</li>
-            <li>Cliffs</li>
-            <li>Activities</li>
-            <li>Contact</li>
-        </ul>
-    </nav>
 <!-- Main Content -->
     <main>
 <h2>Introducing California's Greatest Cliffs</h2>
