--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <header>
     <img src="cliff_ocean.jpg" alt="Ocean View Cliff" width="1280" height="564">
         <div class="main-header">
-            <div class="logo"><h3>Great Cliff's Logo</h3>
+            <div class="logo">
+                <img src="logo.png" alt="Great Cliffs logo" width="125">
                 <nav class="main-menu">
                     <ul>
                         <li>Home</li>
@@ -19,7 +20,7 @@
                         <li>Contact</li>
                     </ul>
                 </nav>
-                <img src="logo.png" alt="Great Cliffs logo" width="125">
+                
         </div>
     </div></header>
 <!-- Main Content -->
