--- a/contact.html
+++ b/contact.html
@@ -7,22 +7,23 @@
 <!-- Container is to wrap everything -->
 <div id="container">
 <!-- Website Brand -->
-    <header>
+<header>
     <img src="cliff_ocean.jpg" alt="Ocean View Cliff" width="1280" height="564">
         <div class="main-header">
             <div class="logo">
                 <img src="logo.png" alt="Great Cliffs logo" width="125">
+                <nav class="main-menu">
+                    <ul>
+                        <li>Home</li>
+                        <li>Cliffs</li>
+                        <li>Activities</li>
+                        <li>Contact</li>
+                    </ul>
+                </nav>
+                
         </div>
     </div></header>
-<!-- Main Navigation -->
-    <nav>
-        <ul>
-            <li>Home</li>
-            <li>Cliffs</li>
-            <li>Activities</li>
-            <li>Contact</li>
-        </ul>
-    </nav>
+</header>
 <!-- Main Content -->
     <main>
         <h1>Contacting Us</h1>
